// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageContainer > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        />
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot on loading state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with action menu 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <button
            aria-haspopup="true"
            aria-label="iconButtonAriaLabel"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11ghgbe-MuiButtonBase-root-MuiIconButton-root"
            id=":r0:-composition-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
              data-testid="MoreVertIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with buttons 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall css-1k23hlb-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            button 1
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall css-1k23hlb-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            button 2
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with description 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with title 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            title
          </h1>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with title and description 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainer > should match snapshot with top info tooltip 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            aria-label="infoTooltip"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-kpimro-MuiSvgIcon-root"
            data-mui-internal-clone-element="true"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`PageContainerSkeleton > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      />
    </div>
  </div>
</body>
`;

exports[`StyledIntroSkeleton > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="css-1mure3k-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1rr4qq7"
      >
        <h1
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
          />
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
          />
        </p>
      </div>
      <div
        class="css-1yo1jo6-MuiStack-root"
      />
    </div>
  </div>
</body>
`;
